--- a/css/main.css
+++ b/css/main.css
@@ -101,14 +101,37 @@ textarea {
  /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+    body{
+        font-family: 'bebas_neueregular' !important;
+        height: 100vh;
+        overflow: hidden;
+    }
+    .contenedor{
+        width: 100%;
+        height: 100%;
+        overflow-y: scroll;
+        scroll-behavior: smooth;
+        scroll-snap-type: y mandatory;
+    }
     .section-tab{
         height: 100vh;
+        scroll-snap-align: center;
         color: #fff;
     }
     .section-tab .contenido{
         padding-left: 8em;
     }
     .home {
+        background: url('../img/bg-home.jpg');
+        background-size: cover;
+        /* background-position: 0px; */
+    }
+    .works {
+        background: url('../img/bg-services.jpg');
+        background-size: cover;
+        /* background-position: 0px; */
+    }
+    .quote {
         background: url('../img/bg-home.jpg');
         background-size: cover;
         /* background-position: 0px; */
