--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,13 @@
 /*! HTML5 Boilerplate v7.1.0 | MIT License | https://html5boilerplate.com/ */
-
 /* main.css 1.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
-
- 
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-
    html {
     color: #222;
     font-size: 1em;
@@ -27,7 +23,6 @@
  *
  * Customize the background color to match your design.
  */
-
 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
@@ -41,7 +36,6 @@
 /*
  * A better looking default horizontal rule
  */
-
 hr {
     display: block;
     height: 1px;
@@ -56,20 +50,13 @@ hr {
  * images, videos and the bottom of their containers:
  * https://github.com/h5bp/html5-boilerplate/issues/440
  */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
+audio, canvas, iframe, img, svg, video {
     vertical-align: middle;
 }
 
 /*
  * Remove default fieldset styles.
  */
-
 fieldset {
     border: 0;
     margin: 0;
@@ -79,7 +66,6 @@ fieldset {
 /*
  * Allow only vertical resizing of textareas.
  */
-
 textarea {
     resize: vertical;
 }
@@ -87,7 +73,6 @@ textarea {
 /* ==========================================================================
    Browser Upgrade Prompt
    ========================================================================== */
-
 .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
@@ -95,99 +80,105 @@ textarea {
     padding: 0.2em 0;
 }
 
-
-
-
- /* ==========================================================================
+/* ==========================================================================
    Author's custom styles
    ========================================================================== */
-    body{
-        font-family: 'bebas_neueregular' !important;
-        height: 100vh;
-        overflow: hidden;
-    }
-    .contenedor{
-        width: 100%;
-        height: 100%;
-        overflow-y: scroll;
-        scroll-behavior: smooth;
-        scroll-snap-type: y mandatory;
-        max-height: 100vh;
-        overflow: hidden;
-    }
-    .contenedor > div {
-      transition: all .5s;
-    }
-    .section-tab{
-        height: 100vh;
-        scroll-snap-align: center;
-        color: #fff;
-    }
-    .section-tab .contenido{
-        padding-left: 8em;
-    }
-    .home {
-        background: url('../img/bg-home.jpg');
-        background-size: cover;
-        /* background-position: 0px; */
-    }
-    .works {
-        background: url('../img/bg-services.jpg');
-        background-size: cover;
-        /* background-position: 0px; */
-    }
-    .quote {
-        background: url('../img/bg-home.jpg');
-        background-size: cover;
-        /* background-position: 0px; */
-    }
-    .navigation-tabs, .menu-fixed{
-        position: fixed;
-        z-index: 1;
-        color: #fff;
-    }
-    .menu-fixed{
-        top: 0;
-    }
-    /* Nav-tabs */
-    .navigation-tabs{
-        left: 81%;
-        top: 30%;
-    }
-    .navigation-tabs nav ul  li{
-        list-style: none;
-        margin-bottom: 1.5em;
-    }
-    .navigation-tabs nav ul  li a{
-        color: #fff;
-        font-size: 1.5em;
-        font-weight: bold;
-    }
-    .circle{
-        width: 7px;
-        height: 7px;
-        background: #fff;
-        border-radius: 50%;
-    }
-    .line{
-        width: 10px;
-        height: 1px;
-        background: #fff;
-    }
+body {
+    font-family: 'bebas_neueregular' !important;
+    height: 100vh;
+    overflow: hidden;
+}
 
+.contenedor {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    max-height: 100vh;
+    overflow: hidden;
+}
 
+.contenedor > div {
+    /* transition: all .5s; */
+}
 
+.section-tab {
+    height: 100vh;
+    scroll-snap-align: center;
+    color: #fff;
+}
 
- /* ==========================================================================
+.section-tab .contenido {
+    padding-left: 8em;
+}
+
+.home {
+    background: url('../img/bg-home.jpg');
+    background-size: cover;
+    /* background-position: 0px; */
+}
+
+.works {
+    background: url('../img/bg-services.jpg');
+    background-size: cover;
+    /* background-position: 0px; */
+}
+
+.quote {
+    background: url('../img/bg-home.jpg');
+    background-size: cover;
+    /* background-position: 0px; */
+}
+
+.navigation-tabs, .menu-fixed {
+    position: fixed;
+    z-index: 1;
+    color: #fff;
+}
+
+.menu-fixed {
+    top: 0;
+}
+
+/* Nav-tabs */
+.navigation-tabs {
+    left: 81%;
+    top: 30%;
+}
+
+.navigation-tabs nav ul li {
+    list-style: none;
+    margin-bottom: 1.5em;
+}
+
+.navigation-tabs nav ul li a {
+    color: #fff;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.circle {
+    width: 7px;
+    height: 7px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+.line {
+    width: 10px;
+    height: 1px;
+    background: #fff;
+}
+
+/* ==========================================================================
    Helper classes
    ========================================================================== */
-
 /*
  * Hide visually and from screen readers
  */
-
- .hidden {
-  display: none !important;
+.hidden {
+    display: none !important;
 }
 
 /*
@@ -198,17 +189,17 @@ textarea {
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */
-
 .visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap; /* 1 */
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+    /* 1 */
 }
 
 /*
@@ -216,24 +207,21 @@ textarea {
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto;
-  white-space: inherit;
+.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
+    white-space: inherit;
 }
 
 /*
 * Hide visually and from screen readers, but maintain layout
 */
-
 .invisible {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 /*
@@ -247,55 +235,46 @@ textarea {
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */
-
-.clearfix:before,
-.clearfix:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
+.clearfix:before, .clearfix:after {
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
-  clear: both;
+    clear: both;
 }
 
- 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-
-   @media only screen and (min-width: 35em) {
+@media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
 }
 
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+@media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
- 
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
-
-   @media print {
-    *,
-    *:before,
-    *:after {
+@media print {
+    *, *:before, *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster */
+        color: #000 !important;
+        /* Black prints faster */
         -webkit-box-shadow: none !important;
         box-shadow: none !important;
         text-shadow: none !important;
     }
 
-    a,
-    a:visited {
+    a, a:visited {
         text-decoration: underline;
     }
 
@@ -311,17 +290,15 @@ textarea {
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
      */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
+    a[href^="#"]:after, a[href^="javascript:"]:after {
         content: "";
     }
 
     pre {
         white-space: pre-wrap !important;
     }
-    pre,
-    blockquote {
+
+    pre, blockquote {
         border: 1px solid #999;
         page-break-inside: avoid;
     }
@@ -330,27 +307,20 @@ textarea {
      * Printing Tables:
      * http://css-discuss.incutio.com/wiki/Printing_Tables
      */
-
     thead {
         display: table-header-group;
     }
 
-    tr,
-    img {
+    tr, img {
         page-break-inside: avoid;
     }
 
-    p,
-    h2,
-    h3 {
+    p, h2, h3 {
         orphans: 3;
         widows: 3;
     }
 
-    h2,
-    h3 {
+    h2, h3 {
         page-break-after: avoid;
     }
 }
-
-
