--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-html {
+   html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
@@ -155,10 +155,15 @@ main {
     height: 7px;
     background: #fff;
     border-radius: 50%;
+    transition: all .5s;
+}
+
+.active .circle {
+    transform: scale(3);
 }
 
 .line {
-    width: 10px;
+    width: 15px;
     height: 1px;
     background: #fff;
 }
