--- a/css/main.css
+++ b/css/main.css
@@ -90,13 +90,13 @@ body {
 }
 
 main {
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
-    max-height: 100vh;
-    overflow: hidden;
+    /* width: 100%; */
+    /* height: 100%; */
+    /* overflow-y: scroll; */
+    /* scroll-behavior: smooth; */
+    /* scroll-snap-type: y mandatory; */
+    /* max-height: 100vh; */
+    /* overflow: hidden; */
 }
 
 .section-tab {
